Put Together Components/Troubleshooted Layout Issues.

--- a/css/styles.css
+++ b/css/styles.css
@@ -25,7 +25,7 @@ html {
 
 body {
     font-family: Inter, Arial, Helvetica, sans-serif;
-    font-size: 2.4rem;
+    font-size: 2rem;
     line-height: 1.5;
     color: var(--color-body);
 }
@@ -37,7 +37,7 @@ h1, h2, h3 {
 }
 
 h1 {
-    font-size: 7rem;
+    font-size: 6rem;
 }
 
 h2 {
@@ -45,8 +45,9 @@ h2 {
 }
 
 h3 {
-    font-size: 3rem;
-    font-weight: 500;
+    font-size: 2.8rem;
+    font-weight: 600;
+    line-height: 1.3;
 }
 
 p {
@@ -55,7 +56,7 @@ p {
 
 @media screen and (min-width: 1024px) {
     body {
-        font-size: 1.8 rem;
+        font-size: 1.8rem;
     }
 
     h1 {
@@ -137,7 +138,7 @@ a {
 /* Lists */
 .list {
     list-style: none;
-    padding-left: 0;    
+    padding-left: 0;
 }
 
 .list--inline .list__item {
@@ -202,7 +203,7 @@ a {
     text-transform: uppercase;
     margin: 1rem 0;
     outline: 0;
-    padding: 2rem 3rem;
+    padding: 2rem 4vw;
     border: 0;
     border-radius: 40px;
     cursor: pointer;
@@ -294,6 +295,7 @@ a {
     border: 0;
     flex-grow: 1;
     padding: 1.5rem 2rem;
+    width: 0;
 }
 
 .input-group .btn {
@@ -440,8 +442,8 @@ a {
 }
 
 .quote__author {
-    font-size: 3rem;
-    font-weight: 600;
+    font-size: 2rem;
+    font-weight: 500;
     font-style: normal;
     margin-bottom: 0;
 }
@@ -449,7 +451,7 @@ a {
 .quote__organization {
     color: var(--color-headings);
     opacity: 0.4;
-    font-size: 2rem;
+    font-size: 1.5rem;
     font-style: normal;
 }
 
@@ -493,8 +495,14 @@ a {
     padding: 3rem;
 }
 
+.testimonial .quote {
+    margin: 2rem 0;
+    font-size: 110%;
+}
+
 .testimonial__image {
     position: relative;
+    margin: 0 3rem;
 }
 
 .testimonial__image  > img {
@@ -508,12 +516,15 @@ a {
 }
 
 @media screen and (min-width: 768px) {
-    .testimonial .quote, .testimonial .quote__author {
-        font-size: 2.4rem;
+    .testimonial__image {
+        margin: 0;
     }
 
     .testimonial .quote {
-        margin-left: 6rem;
+        margin: 5rem 0 0 6rem;
+        font-size: 120%;
+        line-height: 1.5;
+
     }
 }
 
@@ -617,13 +628,13 @@ a {
 
 .block--skewed-right {
     padding-bottom: calc(var(--padding-vertical) + 4rem);
-    clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 90%);
+    clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 95%);
 
 }
 
 .block--skewed-left {
     padding-bottom: calc(var(--padding-vertical) + 4rem);
-    clip-path: polygon(0% 0%, 100% 0%, 100% 90%, 0% 100%);
+    clip-path: polygon(0% 0%, 100% 0%, 100% 95%, 0% 100%);
 
 }
 
@@ -724,8 +735,9 @@ a {
 }
 
 .block-domain__prices {
+    color: var(--color-headings);
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(2, 1fr);
     grid-template-rows: repeat(2, 6rem);
     font-size: 2rem;
     font-weight: 600;
@@ -797,6 +809,7 @@ a {
 /* Footer */
 .footer {
     background: #232323;
+    padding-top: 10rem;
 }
 
 .footer a {
@@ -820,6 +833,8 @@ a {
 .footer__heading {
     text-transform: uppercase;
     font-weight: 600;
+    font-size: 2.5rem;
+    line-height: 1.5;
 }
 
 .footer__brand {
@@ -839,6 +854,10 @@ a {
 }
 
 @media screen and (min-width:768px) {
+    .footer {
+        font-size: 1.5rem;
+    }
+    
     .footer__sections {
         grid-template-columns: repeat(auto-fit, minmax(10rem, 1fr));
     }
@@ -868,4 +887,9 @@ a {
     .footer__heading {
         font-size: 1.6rem;
     }
+}
+
+/* Sign-up Callout */
+.callout-signup {
+    transform: translateY(5rem)
 }
